Update quarkus version, add buffer size settings and shrink Netty pipeline